Created ServerPackage1; Edited settings and Form1 (initial commit)

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -2,7 +2,8 @@ unique_ids:
   forms:
     Form1: 62NT3AAPDG3Y3TIWUIXD2WJZ75RRPLR4
   modules: {}
-  server_modules: {}
+  server_modules:
+    ServerPackage1: '1699363726996254648050414.59604'
   assets:
     standard-page.html: H22A7TMFM5AVYTNZHKZF7PGZ4A7JIHWP
     theme.css: KVDACD4G2HM3KOPAHZFOB263NNFI3N4M
