--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -3,12 +3,17 @@ container:
   type: HtmlTemplate
   properties: {html: '@theme:standard-page.html'}
 components:
-- type: ColumnPanel
-  properties: {col_widths: '{}'}
-  name: content_panel
-  layout_properties: {slot: default}
-  components: []
 - type: FlowPanel
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
+  components: []
+- name: label_1
+  properties: {text: Feature Testing, bold: true}
+  type: Label
+  layout_properties: {slot: title}
+- name: check_button
+  properties: {text: Say Hello}
+  type: Button
+  layout_properties: {slot: default}
+  event_bindings: {click: check_button_click}
